--- a/.travis.yml
+++ b/.travis.yml
@@ -3,25 +3,26 @@ sudo: false
 
 matrix:
   include:
-    - go: 1.4
+    - go: 1.11.x
       os: linux
-    - go: tip
+    - go: 1.12.x
+      os: linux
+    - go: 1.11.x
       os: linux
       env: CROSS_COMPILE=true
-    - go: tip
+    - go: 1.12.x
+      os: linux
+      env: CROSS_COMPILE=true
+    - go: 1.11.x
+      os: osx
+    - go: 1.12.x
       os: osx
 
-before_install:
-  - if [ "$CROSS_COMPILE" = "true" ]; then sudo apt update; fi
-
 install:
-  - if [ "$CROSS_COMPILE" = "true" ]; then sudo apt install libc6-dev-i386; fi
-  - if [ "$CROSS_COMPILE" = "true" ]; then sudo apt install gcc-mingw-w64; fi
-  - go get github.com/nsf/termbox-go
   - if [ "$TRAVIS_OS_NAME" = "linux" -a "$CROSS_COMPILE" = "true" ]; then go get github.com/mattn/go-isatty ; fi
   - go get -t -v ./...
 
 script:
   - go build
   - go test
-  - if [ "$TRAVIS_OS_NAME" = "linux" -a "$CROSS_COMPILE" = "true" ]; then env GOOS=windows GOARCH=amd64 CC=x86_64-w64-mingw32-gcc go build -v; fi
+  - if [ "$TRAVIS_OS_NAME" = "linux" -a "$CROSS_COMPILE" = "true" ]; then env GOOS=windows GOARCH=amd64 CGO_ENABLED=0 go build -v; fi
